--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<div class="col-md-4">
 							<div class="watch-img-carousel-wrap owl-carousel">
 								<div class="watch-single-img">
-									<img src="assets/img/watch/watch1.png" alt="">
+									<img src="assets/img/watch/kangen water India" alt="">
 								</div>
 								<div class="watch-single-img">
 									<img src="assets/img/watch/watch2.png" alt="">
