--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="zxx"> 
     
-<!-- Mirrored from static.crazycafe.net/crazycafe/prohub/watch.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 16 Oct 2018 12:01:36 GMT -->
+
 <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -531,7 +531,7 @@
 					<div class="row">
 						<div class="col-md-5">
 							<div class="cam-copy">
-								<p>Design by @copyCrazycafe all right reserved</p>
+								<p>Crafted by Aenon Technologies PVT LTD All Rights Reserved</p>
 							</div>
 						</div>
 						<div class="col-md-7">
@@ -560,5 +560,5 @@
         <script src="assets/js/main.js"></script>
     </body>
 
-<!-- Mirrored from static.crazycafe.net/crazycafe/prohub/watch.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 16 Oct 2018 12:02:19 GMT -->
+
 </html>
