--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								<h1>Change your water - Change your Life!</h1>
 								<p>Everyone is uncovering the power of life changing Kangen Water </p>
 								<div class="watch-hero-video">
-									<span><a class="venobox vbox-item" data-gall="gall-video" data-autoplay="true" data-vbtype="video" href="https://vimeo.com/75976293"><i class="fa fa-play"></i></a>See this interior</span>
+									<span><a class="venobox vbox-item" data-gall="gall-video" data-autoplay="true" data-vbtype="video" href="https://vimeo.com/75976293"><i class="fa fa-play"></i></a>Drink Your Way to Better Health</span>
 								</div>
 							</div>
 						</div>
