--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							</div>
 						</div>
 						<div class="col-md-4">
-							<div class="watch-img-carousel-wrap wow fadeInLeft">
+							<div class="watch-img-carousel-wrap owl-carousel wow fadeInLeft">
 								<div class="watch-single-img">
 									<img src="assets/img/watch/kanger water India.png" alt="">
 								</div>
