--- a/index.html
+++ b/index.html
@@ -77,11 +77,19 @@
 							</div>
 						</div>
 						<div class="col-md-4">
-							<div class="watch-img-carousel-wrap owl-carousel wow fadeInLeft">
+							<div class="watch-img-carousel-wrap owl-carousel">
 								<div class="watch-single-img">
 									<img src="assets/img/watch/kanger water India.png" alt="">
 								</div>
-								
+								<div class="watch-single-img">
+									<img src="assets/img/watch/watch2.png" alt="">
+								</div>
+								<div class="watch-single-img">
+									<img src="assets/img/watch/watch3.png" alt="">
+								</div>
+								<div class="watch-single-img">
+									<img src="assets/img/watch/watch4.png" alt="">
+								</div>
 							</div>
 						</div>
 					</div>
