--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 									<img src="assets/img/watch/kanger water India.png" alt="">
 								</div>
 								<div class="watch-single-img">
-									<img src="assets/img/watch/watch2.png" alt="">
+									<img src="assets/img/watch/kanger water India.png" alt="">
 								</div>
 								<div class="watch-single-img">
-									<img src="assets/img/watch/watch3.png" alt="">
+									<img src="assets/img/watch/kanger water India.png" alt="">
 								</div>
 								<div class="watch-single-img">
-									<img src="assets/img/watch/watch4.png" alt="">
+									<img src="assets/img/watch/kanger water India.png" alt="">
 								</div>
 							</div>
 						</div>
