--- a/index.html
+++ b/index.html
@@ -103,16 +103,17 @@
 						<div class="col-md-6 wow fadeInLeft">
 							<div class="watch-about-content-wrap">
 								<div class="watch-section-title">
-									<h4>ABOUT US</h4>
-									<h2>A watch store crafting <br>beautiful experiences</h2>
+									<h4>ABOUT</h4>
+									<h2>What Is Kangen Water?</h2>
 								</div>
 								<div class="watch-about-content">
-									<p>Expression of modern scientific inquiry and exposition. 
-									Its opening follows a series of setbacks and lawsuits and 
-									a scramble to finish the 250,000-square-foot structure. 
-									At one point, the project ran precariously short of money. 
-									museum’s high profile opening is especially significant 
-									in a state imperiled by rising sea levels .</p>
+									<p>Kangen Water® is delicious water created from Enagic's 
+										innovative water technology. Not only do these devices 
+										filter your tap water, but they also produce ionized alkaline 
+										and acidic waters through electrolysis. These waters can be 
+										used for various purposes, including drinking, cooking, beauty, 
+										and cleaning.
+									</p>
 								</div>
 							</div>
 						</div>
