--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 									<h2>What Is Kangen Water?</h2>
 								</div>
 								<div class="watch-about-content">
-									<p>Kangen Water® is delicious water created from Enagic's 
+									<p>Kangen Water is delicious water created from Enagic's 
 										innovative water technology. Not only do these devices 
 										filter your tap water, but they also produce ionized alkaline 
 										and acidic waters through electrolysis. These waters can be 
@@ -203,9 +203,15 @@
 						<div class="col-md-8 offset-md-2">
 							<div class="watch-cta-content">
 								<h2>Anywhere you go</h2>
-								<p>Saturn and its innermost ring on April 26, the first of 22 such encounters before it will plunge 
-									into Saturn’s atmosphere in September. What Cassini did not detect were many of the collis
-									ions of dust particles hitting the spacecraft as it passed through </p>
+								<p>Kangen Water® also contains various minerals, such as calcium, sodium, potassium, and magnesium. 
+									Unlike other filtration systems that filter out even helpful minerals, your Enagic® filtration machine will keep these minerals intact.
+									This provides a high-quality water that can be used for many different purposes.
+									The five types of Enagic water will give you instant access to all-natural solutions for your entire household.
+									With just a push of a button, you can create water that will help enliven your plants, make an aromatic fragrance, cook a delectable meal, or clean a stubborn stain.
+									Now that's versatility! Each state-of-the-art Enagic water ionizing machine will not only help you stay hydrated, but will also encourage you to maintain a clean, green home.
+									Take some time to discover what these five remarkable waters can do for your household, and uncover a new world of living in harmony with Nature, thanks to healthy Kangen Water!
+
+								</p>
 								<a href="#" class="watch-cta-btn">Buy now</a>
 							</div>
 						</div>
