--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
 					<div class="row">
 						<div class="col-md-8 offset-md-2">
 							<div class="watch-cta-content">
-								<h2>Healthy Alternative to regular Tap and <br>
-									Bottled Water<br></h2>
+								<h2>Healthy Alternative to regular Tap and <br></h2>
+								<h2>Bottled Water<br></h2>
 								<p>Kangen Water® also contains various minerals, such as calcium, sodium, potassium, and magnesium.Unlike other filtration systems that filter out even helpful minerals, your Enagic® filtration machine will keep these minerals intact.This provides a high-quality water that can be used for many different purposes.
 								The five types of Enagic water will give you instant access to all-natural solutions for your entire household.With just a push of a button, you can create water that will help enliven your plants, make an aromatic fragrance, cook a delectable meal, or clean a stubborn stain.Now that's versatility! Each state-of-the-art Enagic water ionizing machine will not only help you stay hydrated, but will also encourage you to maintain a clean, green home.
 								Take some time to discover what these five remarkable waters can do for your household, and uncover a new world of living in harmony with Nature, thanks to healthy Kangen Water!																											
