--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						<div class="col">
 							<div class="watch-section-title">
 								<h4>FEATURES</h4>
-								<h2>You’ll be happy to see our <br>awesome features.</h2>
+								<h2>Amazing Benefits of <br>Kangen water.</h2>
 							</div>
 						</div>
 					</div>
