--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
 						<div class="col-md-4">
 							<div class="single-watch-feature one">
 								<img src="assets/img/watch/feature1.png" alt="">
-								<h4>30 M water resistance</h4>
-								<p>Paper  had only a child’s pinkie bonewo
-								with. His group surprised the world in 20 
-								reporting that it had extracted </p>
+								<h4>A Powerful Antioxidant</h4>
+								<p>Anti-oxidants help protect our bodies from 
+								   free radicals that can cause various health 
+								   problems.</p>
 							</div>
 						</div>
 						<div class="col-md-4">
