--- a/index.html
+++ b/index.html
@@ -152,10 +152,11 @@
 						<div class="col-md-4">
 							<div class="single-watch-feature two">
 								<img src="assets/img/watch/feature2.png" alt="">
-								<h4>Smart Connection</h4>
-								<p>Paper  had only a child’s pinkie bonewo
-								with. His group surprised the world in 20 
-								reporting that it had extracted </p>
+								<h4>Balances The pH Levels Of The Body</h4>
+								<p>When your body becomes too acidic, it can 
+								interfere with the activity of all the cells in 
+							    your body.Alkaline water helps by neutralizing 
+							    the acid levels of the body</p>
 							</div>
 						</div>
 						<div class="col-md-4">
