--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 						<div class="col-md-4">
 							<div class="single-watch-feature two">
 								<img src="assets/img/watch/feature2.png" alt="">
-								<h4>Balances The pH Levels of Body</h4>
+								<h4>Balances Body pH Levels</h4>
 								<p>When your body becomes too acidic, it can 
 								interfere with the activity of all the cells in 
 							    your body.Alkaline water helps by neutralizing 
