--- a/index.html
+++ b/index.html
@@ -153,19 +153,16 @@
 							<div class="single-watch-feature two">
 								<img src="assets/img/watch/feature2.png" alt="">
 								<h4>Balances Body pH Levels</h4>
-								<p>When your body becomes too acidic, it can 
-								interfere with the activity of all the cells in 
-							    your body.Alkaline water helps by neutralizing 
+								<p>Alkaline water helps by neutralizing 
 							    the acid levels of the body</p>
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="single-watch-feature three">
 								<img src="assets/img/watch/feature3.png" alt="">
-								<h4>Turn-by-turn Directions</h4>
-								<p>Looking for these genetic signposts in 
-								sediment has become possible only in 
-								the last few years, with recent </p>
+								<h4>Better Hydration</h4>
+								<p>The body can be hydrated more effectively
+								 by drinking alkaline water instead of everyday tap water.</p>
 							</div>
 						</div>
 						<div class="col-md-4">
