--- a/index.html
+++ b/index.html
@@ -168,19 +168,18 @@
 						<div class="col-md-4">
 							<div class="single-watch-feature four">
 								<img src="assets/img/watch/feature4.png" alt="">
-								<h4>News Alerts</h4>
-								<p>Developments in technology, including 
-								rapid sequencing of DNA. Although DNA 
-								sticks to minerals and</p>
+								<h4>Detox the Body</h4>
+								<p>A primary benefit of drinking alkaline water 
+								is its ability to wash away toxins that may cause 
+							    your body to develop diseases and illnesses. </p>
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="single-watch-feature five">
 								<img src="assets/img/watch/feature5.png" alt="">
-								<h4>Allways on color display</h4>
-								<p>Decayed plants in soil, scientists didnt 
-								know whether it would ever be possibl
-								scientists, led by Matthias</p>
+								<h4>Boost Immune System</h4>
+								<p>Keeping our bodies in a more alkaline state 
+								 will boost the immune system.</p>
 							</div>
 						</div>
 						<div class="col-md-4">
