--- a/index.html
+++ b/index.html
@@ -177,18 +177,18 @@
 						<div class="col-md-4">
 							<div class="single-watch-feature five">
 								<img src="assets/img/watch/feature5.png" alt="">
-								<h4>Boost Immune System</h4>
-								<p>Keeping our bodies in a more alkaline state 
-								 will boost the immune system.</p>
+								<h4>Helps Fight Cancer</h4>
+								<p>  Cancer thrives in an acidic environment. 
+								The alkaline balance of the body is important to
+							    prevent the growth of malignant cells. </p>
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="single-watch-feature six">
 								<img src="assets/img/watch/feature6.png" alt="">
-								<h4>Voice reply notifications</h4>
-								<p>Paper  had only a child’s pinkie bonewo
-								with. His group surprised the world in 20 
-								reporting that it had extracted </p>
+								<h4>Help You Lose Weight</h4>
+								<p>Drinking alkaline water significantly helps 
+								in weight loss because fat storage is reduced.</p>
 							</div>
 						</div>
 					</div>
