--- a/index.html
+++ b/index.html
@@ -188,7 +188,10 @@
 								<img src="assets/img/watch/feature6.png" alt="">
 								<h4>Help You Lose Weight</h4>
 								<p>Drinking alkaline water significantly helps 
-								in weight loss because fat storage is reduced.</p>
+								in weight loss because fat storage is reduced.
+								Alkaline water naturally neutralizes the acids 
+								in the body.
+							</p>
 							</div>
 						</div>
 					</div>
