--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 								<h4>Balances Body pH Levels</h4>
 								<p>Alkaline water helps by neutralizing 
 							    the acid levels of the body</p>
+							    <p hidden>This paragraph should be hidden.</p>
 							</div>
 						</div>
 						<div class="col-md-4">
