--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
 										<img src="assets/img/watch/sp2.png" alt="">
 									</div>
 									<div class="spec-centent">
-										<h1>18 <span>HOURS</span></h1>
-										<p>STAND-BY BATTERY</p>
+										<h1>230 <span>Wattage(W)</span></h1>
+										<p>STAND-BY POWER</p>
 									</div>
 								</div>
 							</div>
