--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 										<img src="assets/img/watch/sp2.png" alt="">
 									</div>
 									<div class="spec-centent">
-										<h1>230 <span>Wattage(W)</span></h1>
+										<h1>230 <span>Watts(w)</span></h1>
 										<p>STAND-BY POWER</p>
 									</div>
 								</div>
@@ -272,8 +272,8 @@
 						<div class="row">
 							<div class="col-md-4">
 								<div class="watch-pro-content">
-									<h5>Dimensions</h5>
-									<p>42 x 35.9 x 10.5 mm (1.65 x 1.41 x 0.41 in)</p>
+									<h5>Electrode Plates</h5>
+									<p>Seven numbers(7)</p>
 								</div>
 								<div class="watch-pro-content">
 									<h5>Color</h5>
